[package]
name = "adventOfCode19"
version = "0.1.0"
authors = ["Markus Richter <markus.richter@hu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[features]
default = []
d1_1 =[]
d1_2 =[]
d2_1 =[]
d2_2 =[]
d4_1 =[]
d4_2 =[]
d5_1 =[]
d5_2 =[]
d7_1 =[]
d7_2 =[]
