[package]
name = "adventOfCode19"
version = "0.1.0"
authors = ["Markus Richter <markus.richter@hu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[features]
default = []
d1_1 =[]
d1_2 =[]
d2_1 =[]
d2_2 =[]
d3_1 =[]
d3_2 =[]
d4_1 =[]
d4_2 =[]
d5_1 =[]
d5_2 =[]
d6_1 =[]
d6_2 =[]
d7_1 =[]
d7_2 =[]
d8_1 =[]
d8_2 =[]
d9_1 =[]
d9_2 =[]
d10_1 =[]
d10_2 =[]
d11_1 =[]
d11_2 =[]
d12_1 =[]
d12_2 =[]
d13_1 =[]
d13_2 =[]
d14_1 =[]
d14_2 =[]
d15_1 =[]
d15_2 =[]
d16_1 =[]
d16_2 =[]
d17_1 =[]
d17_2 =[]
d18_1 =[]
d18_2 =[]
d19_1 =[]
d19_2 =[]
